// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Follow /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Provider
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <Connect(Follow) />
  </Provider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<FollowButton /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FollowButton
    followedUsername="cdvx"
    onClick={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className="btn  btn-outline-blue btn-lg"
        href="#"
      >
        Follow 
        cdvx
      </a>,
      "className": "blog-pagination",
      "id": "follow",
      "onClick": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Follow ",
          "cdvx",
        ],
        "className": "btn  btn-outline-blue btn-lg",
        "href": "#",
      },
      "ref": null,
      "rendered": Array [
        "Follow ",
        "cdvx",
      ],
      "type": "a",
    },
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="btn  btn-outline-blue btn-lg"
          href="#"
        >
          Follow 
          cdvx
        </a>,
        "className": "blog-pagination",
        "id": "follow",
        "onClick": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Follow ",
            "cdvx",
          ],
          "className": "btn  btn-outline-blue btn-lg",
          "href": "#",
        },
        "ref": null,
        "rendered": Array [
          "Follow ",
          "cdvx",
        ],
        "type": "a",
      },
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<FollowStatus /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Provider
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <Connect(FollowStatus) />
  </Provider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<RelatedArticles /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RelatedArticles />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <ul
        className="list-unstyled"
      >
        <li
          className="media"
        >
          <img
            alt="Generic placeholder image"
            className="d-flex mr-3"
            src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg"
          />
          <div
            className="media-body"
          >
            <a
              href=""
            >
              <h5
                className="mt-0 mb-1 font-weight-bold"
              >
                List-based media object
              </h5>
            </a>
            Cras sit amet nibh libero, in gravida nulla (...)
          </div>
        </li>
        <li
          className="media my-4"
        >
          <img
            alt="An image"
            className="d-flex mr-3"
            src="https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg"
          />
          <div
            className="media-body"
          >
            <a
              href=""
            >
              <h5
                className="mt-0 mb-1 font-weight-bold"
              >
                List-based media object
              </h5>
            </a>
            Cras sit amet nibh libero, in gravida nulla (...)
          </div>
        </li>
        <li
          className="media"
        >
          <img
            alt="Generic placeholder image"
            className="d-flex mr-3"
            src="https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg"
          />
          <div
            className="media-body"
          >
            <a
              href=""
            >
              <h5
                className="mt-0 mb-1 font-weight-bold"
              >
                List-based media object
              </h5>
            </a>
            Cras sit amet nibh libero, in gravida nulla (...)
          </div>
        </li>
      </ul>,
      "className": "card-body",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="media"
          >
            <img
              alt="Generic placeholder image"
              className="d-flex mr-3"
              src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg"
            />
            <div
              className="media-body"
            >
              <a
                href=""
              >
                <h5
                  className="mt-0 mb-1 font-weight-bold"
                >
                  List-based media object
                </h5>
              </a>
              Cras sit amet nibh libero, in gravida nulla (...)
            </div>
          </li>,
          <li
            className="media my-4"
          >
            <img
              alt="An image"
              className="d-flex mr-3"
              src="https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg"
            />
            <div
              className="media-body"
            >
              <a
                href=""
              >
                <h5
                  className="mt-0 mb-1 font-weight-bold"
                >
                  List-based media object
                </h5>
              </a>
              Cras sit amet nibh libero, in gravida nulla (...)
            </div>
          </li>,
          <li
            className="media"
          >
            <img
              alt="Generic placeholder image"
              className="d-flex mr-3"
              src="https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg"
            />
            <div
              className="media-body"
            >
              <a
                href=""
              >
                <h5
                  className="mt-0 mb-1 font-weight-bold"
                >
                  List-based media object
                </h5>
              </a>
              Cras sit amet nibh libero, in gravida nulla (...)
            </div>
          </li>,
        ],
        "className": "list-unstyled",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="Generic placeholder image"
                className="d-flex mr-3"
                src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg"
              />,
              <div
                className="media-body"
              >
                <a
                  href=""
                >
                  <h5
                    className="mt-0 mb-1 font-weight-bold"
                  >
                    List-based media object
                  </h5>
                </a>
                Cras sit amet nibh libero, in gravida nulla (...)
              </div>,
            ],
            "className": "media",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "Generic placeholder image",
                "className": "d-flex mr-3",
                "src": "https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href=""
                  >
                    <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>
                  </a>,
                  "Cras sit amet nibh libero, in gravida nulla (...)",
                ],
                "className": "media-body",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>,
                    "href": "",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "List-based media object",
                      "className": "mt-0 mb-1 font-weight-bold",
                    },
                    "ref": null,
                    "rendered": "List-based media object",
                    "type": "h5",
                  },
                  "type": "a",
                },
                "Cras sit amet nibh libero, in gravida nulla (...)",
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="An image"
                className="d-flex mr-3"
                src="https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg"
              />,
              <div
                className="media-body"
              >
                <a
                  href=""
                >
                  <h5
                    className="mt-0 mb-1 font-weight-bold"
                  >
                    List-based media object
                  </h5>
                </a>
                Cras sit amet nibh libero, in gravida nulla (...)
              </div>,
            ],
            "className": "media my-4",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "An image",
                "className": "d-flex mr-3",
                "src": "https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href=""
                  >
                    <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>
                  </a>,
                  "Cras sit amet nibh libero, in gravida nulla (...)",
                ],
                "className": "media-body",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>,
                    "href": "",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "List-based media object",
                      "className": "mt-0 mb-1 font-weight-bold",
                    },
                    "ref": null,
                    "rendered": "List-based media object",
                    "type": "h5",
                  },
                  "type": "a",
                },
                "Cras sit amet nibh libero, in gravida nulla (...)",
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="Generic placeholder image"
                className="d-flex mr-3"
                src="https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg"
              />,
              <div
                className="media-body"
              >
                <a
                  href=""
                >
                  <h5
                    className="mt-0 mb-1 font-weight-bold"
                  >
                    List-based media object
                  </h5>
                </a>
                Cras sit amet nibh libero, in gravida nulla (...)
              </div>,
            ],
            "className": "media",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "Generic placeholder image",
                "className": "d-flex mr-3",
                "src": "https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href=""
                  >
                    <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>
                  </a>,
                  "Cras sit amet nibh libero, in gravida nulla (...)",
                ],
                "className": "media-body",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>,
                    "href": "",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "List-based media object",
                      "className": "mt-0 mb-1 font-weight-bold",
                    },
                    "ref": null,
                    "rendered": "List-based media object",
                    "type": "h5",
                  },
                  "type": "a",
                },
                "Cras sit amet nibh libero, in gravida nulla (...)",
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <ul
          className="list-unstyled"
        >
          <li
            className="media"
          >
            <img
              alt="Generic placeholder image"
              className="d-flex mr-3"
              src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg"
            />
            <div
              className="media-body"
            >
              <a
                href=""
              >
                <h5
                  className="mt-0 mb-1 font-weight-bold"
                >
                  List-based media object
                </h5>
              </a>
              Cras sit amet nibh libero, in gravida nulla (...)
            </div>
          </li>
          <li
            className="media my-4"
          >
            <img
              alt="An image"
              className="d-flex mr-3"
              src="https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg"
            />
            <div
              className="media-body"
            >
              <a
                href=""
              >
                <h5
                  className="mt-0 mb-1 font-weight-bold"
                >
                  List-based media object
                </h5>
              </a>
              Cras sit amet nibh libero, in gravida nulla (...)
            </div>
          </li>
          <li
            className="media"
          >
            <img
              alt="Generic placeholder image"
              className="d-flex mr-3"
              src="https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg"
            />
            <div
              className="media-body"
            >
              <a
                href=""
              >
                <h5
                  className="mt-0 mb-1 font-weight-bold"
                >
                  List-based media object
                </h5>
              </a>
              Cras sit amet nibh libero, in gravida nulla (...)
            </div>
          </li>
        </ul>,
        "className": "card-body",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="media"
            >
              <img
                alt="Generic placeholder image"
                className="d-flex mr-3"
                src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg"
              />
              <div
                className="media-body"
              >
                <a
                  href=""
                >
                  <h5
                    className="mt-0 mb-1 font-weight-bold"
                  >
                    List-based media object
                  </h5>
                </a>
                Cras sit amet nibh libero, in gravida nulla (...)
              </div>
            </li>,
            <li
              className="media my-4"
            >
              <img
                alt="An image"
                className="d-flex mr-3"
                src="https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg"
              />
              <div
                className="media-body"
              >
                <a
                  href=""
                >
                  <h5
                    className="mt-0 mb-1 font-weight-bold"
                  >
                    List-based media object
                  </h5>
                </a>
                Cras sit amet nibh libero, in gravida nulla (...)
              </div>
            </li>,
            <li
              className="media"
            >
              <img
                alt="Generic placeholder image"
                className="d-flex mr-3"
                src="https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg"
              />
              <div
                className="media-body"
              >
                <a
                  href=""
                >
                  <h5
                    className="mt-0 mb-1 font-weight-bold"
                  >
                    List-based media object
                  </h5>
                </a>
                Cras sit amet nibh libero, in gravida nulla (...)
              </div>
            </li>,
          ],
          "className": "list-unstyled",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  alt="Generic placeholder image"
                  className="d-flex mr-3"
                  src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg"
                />,
                <div
                  className="media-body"
                >
                  <a
                    href=""
                  >
                    <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>
                  </a>
                  Cras sit amet nibh libero, in gravida nulla (...)
                </div>,
              ],
              "className": "media",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Generic placeholder image",
                  "className": "d-flex mr-3",
                  "src": "https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      href=""
                    >
                      <h5
                        className="mt-0 mb-1 font-weight-bold"
                      >
                        List-based media object
                      </h5>
                    </a>,
                    "Cras sit amet nibh libero, in gravida nulla (...)",
                  ],
                  "className": "media-body",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <h5
                        className="mt-0 mb-1 font-weight-bold"
                      >
                        List-based media object
                      </h5>,
                      "href": "",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "List-based media object",
                        "className": "mt-0 mb-1 font-weight-bold",
                      },
                      "ref": null,
                      "rendered": "List-based media object",
                      "type": "h5",
                    },
                    "type": "a",
                  },
                  "Cras sit amet nibh libero, in gravida nulla (...)",
                ],
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  alt="An image"
                  className="d-flex mr-3"
                  src="https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg"
                />,
                <div
                  className="media-body"
                >
                  <a
                    href=""
                  >
                    <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>
                  </a>
                  Cras sit amet nibh libero, in gravida nulla (...)
                </div>,
              ],
              "className": "media my-4",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "An image",
                  "className": "d-flex mr-3",
                  "src": "https://mdbootstrap.com/img/Photos/Others/placeholder6.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      href=""
                    >
                      <h5
                        className="mt-0 mb-1 font-weight-bold"
                      >
                        List-based media object
                      </h5>
                    </a>,
                    "Cras sit amet nibh libero, in gravida nulla (...)",
                  ],
                  "className": "media-body",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <h5
                        className="mt-0 mb-1 font-weight-bold"
                      >
                        List-based media object
                      </h5>,
                      "href": "",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "List-based media object",
                        "className": "mt-0 mb-1 font-weight-bold",
                      },
                      "ref": null,
                      "rendered": "List-based media object",
                      "type": "h5",
                    },
                    "type": "a",
                  },
                  "Cras sit amet nibh libero, in gravida nulla (...)",
                ],
                "type": "div",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  alt="Generic placeholder image"
                  className="d-flex mr-3"
                  src="https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg"
                />,
                <div
                  className="media-body"
                >
                  <a
                    href=""
                  >
                    <h5
                      className="mt-0 mb-1 font-weight-bold"
                    >
                      List-based media object
                    </h5>
                  </a>
                  Cras sit amet nibh libero, in gravida nulla (...)
                </div>,
              ],
              "className": "media",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Generic placeholder image",
                  "className": "d-flex mr-3",
                  "src": "https://mdbootstrap.com/img/Photos/Others/placeholder5.jpg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <a
                      href=""
                    >
                      <h5
                        className="mt-0 mb-1 font-weight-bold"
                      >
                        List-based media object
                      </h5>
                    </a>,
                    "Cras sit amet nibh libero, in gravida nulla (...)",
                  ],
                  "className": "media-body",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <h5
                        className="mt-0 mb-1 font-weight-bold"
                      >
                        List-based media object
                      </h5>,
                      "href": "",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "List-based media object",
                        "className": "mt-0 mb-1 font-weight-bold",
                      },
                      "ref": null,
                      "rendered": "List-based media object",
                      "type": "h5",
                    },
                    "type": "a",
                  },
                  "Cras sit amet nibh libero, in gravida nulla (...)",
                ],
                "type": "div",
              },
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<UnFollowButton /> renders the component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UnFollowButton
    followedUsername="cdvx"
    onClick={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <a
        className="btn  btn-outline-blue btn-lg"
        href="#"
      >
        Unfollow 
        cdvx
      </a>,
      "className": "blog-pagination",
      "id": "unfollow",
      "onClick": [MockFunction],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          "Unfollow ",
          "cdvx",
        ],
        "className": "btn  btn-outline-blue btn-lg",
        "href": "#",
      },
      "ref": null,
      "rendered": Array [
        "Unfollow ",
        "cdvx",
      ],
      "type": "a",
    },
    "type": "nav",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <a
          className="btn  btn-outline-blue btn-lg"
          href="#"
        >
          Unfollow 
          cdvx
        </a>,
        "className": "blog-pagination",
        "id": "unfollow",
        "onClick": [MockFunction],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Unfollow ",
            "cdvx",
          ],
          "className": "btn  btn-outline-blue btn-lg",
          "href": "#",
        },
        "ref": null,
        "rendered": Array [
          "Unfollow ",
          "cdvx",
        ],
        "type": "a",
      },
      "type": "nav",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
